--- a/data6100_final_proj.ipynb
+++ b/data6100_final_proj.ipynb
@@ -141,16 +141,16 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "HXJKQ3dLYu3F",
-        "outputId": "01cb0208-be65-43d2-ac28-d09c56a06978"
+        "outputId": "8be2ff13-88ed-4d94-d1c0-4ecabc45fd61"
       },
       "id": "HXJKQ3dLYu3F",
-      "execution_count": 1,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "new-york-city-taxi- 100%[===================>]   1.56G   108MB/s    in 17s     \n",
+            "new-york-city-taxi- 100%[===================>]   1.56G  92.0MB/s    in 17s     \n",
             "Archive:  new-york-city-taxi-fare-prediction.zip\n",
             "  inflating: GCP-Coupons-Instructions.rtf  \n",
             "  inflating: sample_submission.csv   \n",
@@ -162,7 +162,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 3,
       "id": "afad4bda-224f-41b0-ad54-698a44ce4238",
       "metadata": {
         "id": "afad4bda-224f-41b0-ad54-698a44ce4238"
@@ -245,7 +245,7 @@
         "id": "lHeJ_LCcdm-6"
       },
       "id": "lHeJ_LCcdm-6",
-      "execution_count": 94,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -281,10 +281,10 @@
           "height": 421
         },
         "id": "GC8JXcHyjMFL",
-        "outputId": "3df6fa5f-60fa-418d-9114-8a87e8d5b779"
+        "outputId": "30eee1c3-5ab7-478f-b49d-1bd06fcc17b8"
       },
       "id": "GC8JXcHyjMFL",
-      "execution_count": 95,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -324,7 +324,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-1b903ef4-b58f-4d79-996f-f36d60c33aa9\">\n",
+              "  <div id=\"df-3404c8f1-2b8b-45b0-aacb-bde431e8b154\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -450,7 +450,7 @@
               "</table>\n",
               "<p>109914 rows × 14 columns</p>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-1b903ef4-b58f-4d79-996f-f36d60c33aa9')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-3404c8f1-2b8b-45b0-aacb-bde431e8b154')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -501,12 +501,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-1b903ef4-b58f-4d79-996f-f36d60c33aa9 button.colab-df-convert');\n",
+              "          document.querySelector('#df-3404c8f1-2b8b-45b0-aacb-bde431e8b154 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-1b903ef4-b58f-4d79-996f-f36d60c33aa9');\n",
+              "          const element = document.querySelector('#df-3404c8f1-2b8b-45b0-aacb-bde431e8b154');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -567,10 +567,10 @@
           "height": 646
         },
         "id": "jZn-5RW4Z5Kb",
-        "outputId": "5d29522b-c973-4b21-fd7e-67d8d0662b8c"
+        "outputId": "0dd5f1a1-23d7-4c5f-fe0b-2d2b4f921d23"
       },
       "id": "jZn-5RW4Z5Kb",
-      "execution_count": 96,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -654,7 +654,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-b1efb24e-43e2-431e-a0a7-8448ac81b0a8\">\n",
+              "  <div id=\"df-537ccd62-93aa-4efd-a2ce-db93746d31f7\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -933,7 +933,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-b1efb24e-43e2-431e-a0a7-8448ac81b0a8')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-537ccd62-93aa-4efd-a2ce-db93746d31f7')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -984,12 +984,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-b1efb24e-43e2-431e-a0a7-8448ac81b0a8 button.colab-df-convert');\n",
+              "          document.querySelector('#df-537ccd62-93aa-4efd-a2ce-db93746d31f7 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-b1efb24e-43e2-431e-a0a7-8448ac81b0a8');\n",
+              "          const element = document.querySelector('#df-537ccd62-93aa-4efd-a2ce-db93746d31f7');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -1012,7 +1012,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 96
+          "execution_count": 6
         }
       ]
     },
@@ -1052,10 +1052,10 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "AwX_NDR-l0IC",
-        "outputId": "a74a2a90-8c75-48a0-fe7c-6c7c4ba6714d"
+        "outputId": "d2b9560f-39d1-494d-f588-2afba50b0a11"
       },
       "id": "AwX_NDR-l0IC",
-      "execution_count": 97,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -1093,10 +1093,10 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "h_U2DdX4Fubg",
-        "outputId": "618c6d3b-29c4-4688-b59e-8100ae2cbd3a"
+        "outputId": "3fca6de5-cc42-4f32-e7e2-6f1b44169d13"
       },
       "id": "h_U2DdX4Fubg",
-      "execution_count": 131,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1112,7 +1112,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 131
+          "execution_count": 8
         }
       ]
     },
@@ -1123,7 +1123,7 @@
         "from sklearn.cluster import DBSCAN\n",
         "from sklearn import metrics\n",
         "\n",
-        "db = DBSCAN(eps=0.7, min_samples=100).fit(X)\n",
+        "db = DBSCAN(eps=0.08, min_samples=100).fit(X)\n",
         "labels = db.labels_\n",
         "\n",
         "# Number of clusters in labels, ignoring noise if present.\n",
@@ -1138,17 +1138,17 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ilEqbsjHon-X",
-        "outputId": "815fe9e2-c8eb-4eaf-e91b-d3d6679aa2f0"
+        "outputId": "a09adf5c-e330-46c0-f569-f7179322dc57"
       },
       "id": "ilEqbsjHon-X",
-      "execution_count": 165,
+      "execution_count": 32,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Estimated number of clusters: 2\n",
-            "Estimated number of noise points: 47\n"
+            "Estimated number of clusters: 6\n",
+            "Estimated number of noise points: 2848\n"
           ]
         }
       ]
@@ -1160,25 +1160,49 @@
         "print(np.asarray((unique, counts)).T)"
       ],
       "metadata": {
-        "id": "4hURxBulZ4Nq",
-        "outputId": "9db8c192-5109-4747-c034-fb91d6dedaa1",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "4hURxBulZ4Nq",
+        "outputId": "c3b9cfec-27c4-4fab-e897-19a31e4438fd"
       },
       "id": "4hURxBulZ4Nq",
-      "execution_count": 166,
+      "execution_count": 33,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "[[  -1   47]\n",
-            " [   0 9796]\n",
-            " [   1  156]]\n"
+            "[[  -1 2848]\n",
+            " [   0 5546]\n",
+            " [   1  343]\n",
+            " [   2  348]\n",
+            " [   3  112]\n",
+            " [   4  512]\n",
+            " [   5  290]]\n"
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a=[]\n",
+        "for i in range(1,11):\n",
+        "  db = DBSCAN(eps=i/100, min_samples=100).fit(X)\n",
+        "  labels = db.labels_\n",
+        "  unique, counts = np.unique(labels, return_counts=True)\n",
+        "  print(\"Number of Cluseters:\", len(set(labels)) - (1 if -1 in labels else 0),\"\\n\",\n",
+        "        \"eps: \", i/100, \"\\n\",\n",
+        "        np.asarray((unique, counts)).T, \"\\n\",\n",
+        "        \"----------\")"
+      ],
+      "metadata": {
+        "id": "5OlB8RdcpX9U"
+      },
+      "id": "5OlB8RdcpX9U",
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
