Updated data loading

--- a/data6100_final_proj.ipynb
+++ b/data6100_final_proj.ipynb
@@ -252,7 +252,7 @@
         "        return df_train\n",
         "    else:\n",
         "        chunks = pd.read_csv('train.csv',\n",
-        "                            nrows=20_000_000,\n",
+        "                            nrows=None,\n",
         "                            chunksize=1_000_000,\n",
         "                            usecols=['fare_amount', 'pickup_datetime', 'pickup_longitude', 'pickup_latitude', 'dropoff_longitude', 'dropoff_latitude', 'passenger_count'],\n",
         "                            engine='c',\n",
@@ -282,7 +282,7 @@
         "                       hour   =lambda x: x.pickup_datetime.str[11:13].astype(int),\n",
         "                       )\n",
         "               .drop(columns='pickup_datetime')\n",
-        "    )\n",
+        "               )\n",
         "    print('data loaded from test.csv')\n",
         "    return df_test"
       ],
@@ -320,7 +320,7 @@
           "height": 322
         },
         "id": "GC8JXcHyjMFL",
-        "outputId": "cf263e30-723c-47c2-e805-2d6a86a001cc"
+        "outputId": "ec3a1972-ea63-45bd-e8eb-286829549ceb"
       },
       "id": "GC8JXcHyjMFL",
       "execution_count": 3,
@@ -341,22 +341,22 @@
           "data": {
             "text/plain": [
               "          fare_amount  pickup_longitude  pickup_latitude  dropoff_longitude  \\\n",
-              "9015278          5.00        -73.982428        40.772944         -73.978608   \n",
-              "35462873        57.33        -73.983480        40.758187         -73.787340   \n",
+              "14196309          5.0        -73.991107        40.760480         -73.994877   \n",
+              "26318876         32.0        -74.008906        40.731218         -73.858085   \n",
               "...               ...               ...              ...                ...   \n",
               "9912              NaN        -73.985573        40.735432         -73.939178   \n",
               "9913              NaN        -73.988022        40.754070         -74.000282   \n",
               "\n",
               "          dropoff_latitude  passenger_count  year  month  weekday  hour  \\\n",
-              "9015278          40.764335                1  2012     11        4    13   \n",
-              "35462873         40.646380                1  2014     11        5    16   \n",
+              "14196309         40.749385                2  2014     12        0     0   \n",
+              "26318876         40.728801                1  2012      9        4     1   \n",
               "...                    ...              ...   ...    ...      ...   ...   \n",
               "9912             40.801731                6  2015      1        5     1   \n",
               "9913             40.759220                6  2015      1        6    14   \n",
               "\n",
               "         dataset                          key       dist  \n",
-              "9015278    train                          NaN   1.010202  \n",
-              "35462873   train                          NaN  20.693260  \n",
+              "14196309   train                          NaN   1.274320  \n",
+              "26318876   train                          NaN  12.715415  \n",
               "...          ...                          ...        ...  \n",
               "9912        test  2015-01-31 01:05:19.0000005   8.346106  \n",
               "9913        test  2015-01-18 14:06:23.0000006   1.181196  \n",
@@ -365,7 +365,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-1c4ec6d6-341b-4313-a321-a42fb121f5e1\">\n",
+              "  <div id=\"df-43d33bc1-3311-47a6-b374-a1cf18174ee9\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -402,36 +402,36 @@
               "  </thead>\n",
               "  <tbody>\n",
               "    <tr>\n",
-              "      <th>9015278</th>\n",
-              "      <td>5.00</td>\n",
-              "      <td>-73.982428</td>\n",
-              "      <td>40.772944</td>\n",
-              "      <td>-73.978608</td>\n",
-              "      <td>40.764335</td>\n",
-              "      <td>1</td>\n",
-              "      <td>2012</td>\n",
-              "      <td>11</td>\n",
-              "      <td>4</td>\n",
-              "      <td>13</td>\n",
+              "      <th>14196309</th>\n",
+              "      <td>5.0</td>\n",
+              "      <td>-73.991107</td>\n",
+              "      <td>40.760480</td>\n",
+              "      <td>-73.994877</td>\n",
+              "      <td>40.749385</td>\n",
+              "      <td>2</td>\n",
+              "      <td>2014</td>\n",
+              "      <td>12</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
               "      <td>train</td>\n",
               "      <td>NaN</td>\n",
-              "      <td>1.010202</td>\n",
+              "      <td>1.274320</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>35462873</th>\n",
-              "      <td>57.33</td>\n",
-              "      <td>-73.983480</td>\n",
-              "      <td>40.758187</td>\n",
-              "      <td>-73.787340</td>\n",
-              "      <td>40.646380</td>\n",
+              "      <th>26318876</th>\n",
+              "      <td>32.0</td>\n",
+              "      <td>-74.008906</td>\n",
+              "      <td>40.731218</td>\n",
+              "      <td>-73.858085</td>\n",
+              "      <td>40.728801</td>\n",
               "      <td>1</td>\n",
-              "      <td>2014</td>\n",
-              "      <td>11</td>\n",
-              "      <td>5</td>\n",
-              "      <td>16</td>\n",
+              "      <td>2012</td>\n",
+              "      <td>9</td>\n",
+              "      <td>4</td>\n",
+              "      <td>1</td>\n",
               "      <td>train</td>\n",
               "      <td>NaN</td>\n",
-              "      <td>20.693260</td>\n",
+              "      <td>12.715415</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>...</th>\n",
@@ -485,7 +485,7 @@
               "</table>\n",
               "<p>5552300 rows × 13 columns</p>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-1c4ec6d6-341b-4313-a321-a42fb121f5e1')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-43d33bc1-3311-47a6-b374-a1cf18174ee9')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -536,12 +536,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-1c4ec6d6-341b-4313-a321-a42fb121f5e1 button.colab-df-convert');\n",
+              "          document.querySelector('#df-43d33bc1-3311-47a6-b374-a1cf18174ee9 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-1c4ec6d6-341b-4313-a321-a42fb121f5e1');\n",
+              "          const element = document.querySelector('#df-43d33bc1-3311-47a6-b374-a1cf18174ee9');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -2043,7 +2043,6 @@
     },
     "colab": {
       "provenance": [],
-      "toc_visible": true,
       "include_colab_link": true
     }
   },
